--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Vite + Vue + TS</title>
   </head>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     .loading-box {
       position: fixed;
       height: 100vh;
